; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/dlm/extr_lock.c_do_request.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/dlm/extr_lock.c_do_request.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dlm_rsb = type { i32 }
%struct.dlm_lkb = type { i32 }

@EINPROGRESS = common dso_local global i32 0, align 4
@DLM_LKSTS_WAITING = common dso_local global i32 0, align 4
@EAGAIN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dlm_rsb*, %struct.dlm_lkb*)* @do_request to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @do_request(%struct.dlm_rsb* %0, %struct.dlm_lkb* %1) #0 {
  %3 = alloca %struct.dlm_rsb*, align 8
  %4 = alloca %struct.dlm_lkb*, align 8
  %5 = alloca i32, align 4
  store %struct.dlm_rsb* %0, %struct.dlm_rsb** %3, align 8
  store %struct.dlm_lkb* %1, %struct.dlm_lkb** %4, align 8
  store i32 0, i32* %5, align 4
  %6 = load %struct.dlm_rsb*, %struct.dlm_rsb** %3, align 8
  %7 = load %struct.dlm_lkb*, %struct.dlm_lkb** %4, align 8
  %8 = call i64 @can_be_granted(%struct.dlm_rsb* %6, %struct.dlm_lkb* %7, i32 1, i32 0, i32* null)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %17

10:                                               ; preds = %2
  %11 = load %struct.dlm_rsb*, %struct.dlm_rsb** %3, align 8
  %12 = load %struct.dlm_lkb*, %struct.dlm_lkb** %4, align 8
  %13 = call i32 @grant_lock(%struct.dlm_rsb* %11, %struct.dlm_lkb* %12)
  %14 = load %struct.dlm_rsb*, %struct.dlm_rsb** %3, align 8
  %15 = load %struct.dlm_lkb*, %struct.dlm_lkb** %4, align 8
  %16 = call i32 @queue_cast(%struct.dlm_rsb* %14, %struct.dlm_lkb* %15, i32 0)
  br label %38

17:                                               ; preds = %2
  %18 = load %struct.dlm_lkb*, %struct.dlm_lkb** %4, align 8
  %19 = call i64 @can_be_queued(%struct.dlm_lkb* %18)
  %20 = icmp ne i64 %19, 0
  br i1 %20, label %21, label %30

21:                                               ; preds = %17
  %22 = load i32, i32* @EINPROGRESS, align 4
  %23 = sub nsw i32 0, %22
  store i32 %23, i32* %5, align 4
  %24 = load %struct.dlm_rsb*, %struct.dlm_rsb** %3, align 8
  %25 = load %struct.dlm_lkb*, %struct.dlm_lkb** %4, align 8
  %26 = load i32, i32* @DLM_LKSTS_WAITING, align 4
  %27 = call i32 @add_lkb(%struct.dlm_rsb* %24, %struct.dlm_lkb* %25, i32 %26)
  %28 = load %struct.dlm_lkb*, %struct.dlm_lkb** %4, align 8
  %29 = call i32 @add_timeout(%struct.dlm_lkb* %28)
  br label %38

30:                                               ; preds = %17
  %31 = load i32, i32* @EAGAIN, align 4
  %32 = sub nsw i32 0, %31
  store i32 %32, i32* %5, align 4
  %33 = load %struct.dlm_rsb*, %struct.dlm_rsb** %3, align 8
  %34 = load %struct.dlm_lkb*, %struct.dlm_lkb** %4, align 8
  %35 = load i32, i32* @EAGAIN, align 4
  %36 = sub nsw i32 0, %35
  %37 = call i32 @queue_cast(%struct.dlm_rsb* %33, %struct.dlm_lkb* %34, i32 %36)
  br label %38

38:                                               ; preds = %30, %21, %10
  %39 = load i32, i32* %5, align 4
  ret i32 %39
}

declare dso_local i64 @can_be_granted(%struct.dlm_rsb*, %struct.dlm_lkb*, i32, i32, i32*) #1

declare dso_local i32 @grant_lock(%struct.dlm_rsb*, %struct.dlm_lkb*) #1

declare dso_local i32 @queue_cast(%struct.dlm_rsb*, %struct.dlm_lkb*, i32) #1

declare dso_local i64 @can_be_queued(%struct.dlm_lkb*) #1

declare dso_local i32 @add_lkb(%struct.dlm_rsb*, %struct.dlm_lkb*, i32) #1

declare dso_local i32 @add_timeout(%struct.dlm_lkb*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
